samples/_failures_safe/1761702198_eba783_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26f13afc.c: In function ‘main’:
./samples/SAFE/__tmp_26f13afc.c:152:20: error: missing terminating " character
  152 |             printf("Good
      |                    ^~~~~
./samples/SAFE/__tmp_26f13afc.c:152:13: error: expected expression at end of input
  152 |             printf("Good
      |             ^~~~~~
./samples/SAFE/__tmp_26f13afc.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26f13afc.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26f13afc.c:152:13: error: expected declaration or statement at end of input
